--- a/cart.html
+++ b/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>eShop - Mua sắm online</title>
+    <title>Giỏ hàng | eShop</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="icon" type="image/png" href="assets/image/logo200px.png" >
@@ -9,7 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/aa8e5675e3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/slideshow.css">
+
+    <!--  -->
+    <link rel="stylesheet" type="text/css" href="assets/css/error_page.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/transaction.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/transaction-detail.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/cart.css">
   </head>
   <body class="overlay-scrollbar">
     <header class="header" id="header">
@@ -27,7 +32,7 @@
 
         <ul class="navbar-nav navbar-tab">
           <li class="navbar-item">
-            <a href="index.html" class="navbar-item-link" title="Trang chủ">Trang chủ</a>
+            <a href="#" class="navbar-item-link" title="Trang chủ">Trang chủ</a>
           </li>
           <li class="navbar-item">
             <a href="#" class="navbar-item-link" title="Sản phẩm">Sản phẩm</a>
@@ -56,19 +61,19 @@
             <i class="fas fa-user dropdown-toggle navbar-icon " data-toggle="user-menu" title="Tài khoản"></i>
             <ul id="user-menu" class="dropdown-menu">
               <li class="dropdown-menu-item">
-                <a href="user_info.html" class="dropdown-menu-link">
+                <a href="#" class="dropdown-menu-link">
                   <i class="fas fa-user"></i>
                   <span>Thông tin tài khoản</span>
                 </a>
               </li>
               <li class="dropdown-menu-item">
-                <a href="history_transaction.html" class="dropdown-menu-link">
+                <a href="#" class="dropdown-menu-link">
                   <i class="fas fa-shopping-bag"></i>
                   <span>Lịch sử mua hàng</span>
                 </a>
               </li>
               <li class="dropdown-menu-item">
-                <a href="index_notlogin.html" class="dropdown-menu-link">
+                <a href="#" class="dropdown-menu-link">
                   <i class="fas fa-sign-out-alt"></i>
                   <span>Đăng xuất</span>
                 </a>
@@ -87,7 +92,7 @@
       <div class="navbar-column" id="navbar-menu">
         <ul class="navbar-nav-column ">
           <li class="navbar-item-column">
-            <a href="index.html" class="navbar-link-column" title="Trang chủ">Trang chủ</a>
+            <a href="#" class="navbar-link-column" title="Trang chủ">Trang chủ</a>
           </li>
           <li class="navbar-item-column">
             <a href="#" class="navbar-link-column" title="Sản phẩm">Sản phẩm</a>
@@ -98,44 +103,122 @@
         </ul>
       </div>
     </header>
-    <!-- <div class="loading-wrapper">
-      <img src="assets/image/loading5.gif">
-    </div> -->
+
+
+
+
+
     <main class="main-content">
       <div class="loading-wrapper">
         <img src="assets/image/logo-side180_60px.png" class="loading-logo logo">
         <p>Đang tải trang, bạn chờ một chút nhé ^^</p>
         <img src="assets/image/loading4-crop.gif" class="loading-gif">
       </div>
-      <div class="slideshow-container">
-        <div class="slide-item fade">
-          <!-- <div class="numbertext">1 / 3</div> -->
-          <img src="assets/image/slide1.jpg">
-          <!-- <div class="text">Caption One</div> -->
-        </div>
-        <div class="slide-item fade">
-          <!-- <div class="numbertext">2 / 3</div> -->
-          <img src="assets/image/slide2.jpg">
-          <!-- <div class="text">Caption Two</div> -->
-        </div>
-        <div class="slide-item fade">
-          <!-- <div class="numbertext">3 / 3</div> -->
-          <img src="assets/image/slide3.jpg">
-          <!-- <div class="text">Caption Three</div> -->
-        </div>
-      
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        
-        <br>
 
-        <div class="slideshow-dot-container">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
+      <div class="content">
+        <h2 class="notice">Giỏ hàng <span>(3 sản phẩm)</span></h2>
+        <div class="table-responsive-container">
+          <table class="product-cart-table" >
+            <tr>
+              <th>Sản phẩm</th>
+              <th>Tên sản phẩm</th>
+              <th>Giá</th>
+              <th>Số lượng</th>
+            </tr>
+            <tr>
+              <td class="table-row-link" data-link="#">
+                <img class="img-product-row" src="assets/image/product1.jpg">
+              </td>
+              <td class="product-name-row">
+                Dell Latitude 7480 123221  424325  sf è  we3fsd  wewqdwd 3eqwdwwd 3eqwdwd 3e3w
+              </td>
+              <td class="product-price-row">
+                <p class="price-end-row">12.000.000 đ</p>
+                <p class="price-discount-row">
+                  <span>15.000.000 đ</span> | <span>-20%</span>
+                </p>
+              </td>
+              <td class="product-qty-row">
+                <div>
+                  <span class="decrease-qty value-button" onclick="decreaseValue(this)">-</span>
+                  <input class="input-qty" type="number" value="1" min="1" max="99" id="number" required>
+                  <span class="increase-qty value-button" onclick="increaseValue(this)">+</span>
+                </div>
+                <a href="#" class="remove-product-btn">Xóa</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td class="table-row-link" data-link="#">
+                <img class="img-product-row" src="assets/image/product2.jpg">
+              </td>
+              <td class="product-name-row">
+                Dell Latitude 12323221  424325
+              </td>
+              <td class="product-price-row">
+                <p class="price-end-row">12.000.000 đ</p>
+                <p class="price-discount-row">
+                  <span>15.000.000 đ</span> | <span>-20%</span>
+                </p>
+              </td>
+              <td class="product-qty-row">
+                <div>
+                  <span class="decrease-qty value-button" onclick="decreaseValue(this)">-</span>
+                  <input class="input-qty" type="number" value="1" min="1"  id="number" required>
+                  <span class="increase-qty value-button" onclick="increaseValue(this)">+</span>
+                </div>
+                <a href="#" class="remove-product-btn">Xóa</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="table-row-link" data-link="#">
+                <img class="img-product-row" src="assets/image/product3.jpg">
+              </td>
+              <td class="product-name-row">
+                Dell Latitude 12323221  424325aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+              </td>
+              <td class="product-price-row">
+                <p class="price-end-row">12.000.000 đ</p>
+                <p class="price-discount-row">
+                  <span>15.000.000 đ</span> | <span>-20%</span>
+                </p>
+              </td>
+              <td class="product-qty-row">
+                <div>
+                  <span class="decrease-qty value-button" onclick="decreaseValue(this)">-</span>
+                  <input class="input-qty" type="number" value="1" min="1" max="99" id="number" required>
+                  <span class="increase-qty value-button" onclick="increaseValue(this)">+</span>
+                </div>
+                <a href="#" class="remove-product-btn">Xóa</a>
+              </td>
+            </tr>
+          </table>
         </div>
       </div>
+      <div class="side-container">
+        <img src="assets/image/wallet.svg">
+        <table class="money-container">
+          <tr>
+            <td class="money-item">Tạm tính</td>
+            <td class="money-value">12.000.000 đ</td>
+          </tr>
+          <!-- <tr>
+            <td class="money-item">Phí vận chuyển</td>
+            <td class="money-value">0 đ</td>
+          </tr> -->
+          <tr>
+            <td class="money-item">Tổng cộng</td>
+            <td class="money-value" id="total-money">12.000.000 đ</td>
+          </tr>
+          <tr>
+            <td class="money-item"></td>
+            <td class="money-value" id="notice-VAT">(Đã bao gồm VAT nếu có)</td>
+          </tr>
+        </table>
+        <a href="#" class="pay-link">Tiến hành thanh toán</a>
+      </div>
     </main>
+
 
     <!-- Subscribe container -->
   <hr>
@@ -152,7 +235,6 @@
   </div>
   <!-- End Subscribe container -->
 
-  
     <footer class="footer">
       <hr>
       <div class="footer-info-container">
@@ -211,8 +293,9 @@
       <i class="fas fa-angle-up"></i>
     </a>
 
-    <script src="assets/js/slideshow.js"></script>
     <script src="assets/js/index.js"></script>
+    <script src="assets/js/table.js"></script>
+    <script src="assets/js/product.js"></script>
     <script src="assets/js/scrollToTop.js"></script>
   </body>
   
