--- a/error.html
+++ b/error.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/aa8e5675e3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/slideshow.css">
 
     <!--  -->
     <link rel="stylesheet" type="text/css" href="assets/css/error_page.css">
@@ -113,7 +112,20 @@
     </main>
 
 
-
+    <!-- Subscribe container -->
+  <hr>
+  <div class="subscribe-container">
+    <img src="assets/image/subscribe.svg" alt="subscribe image">
+    <div class="subscribe-text">
+      <p>Đăng ký nhận bản tin từ eShop</p>
+      <p>Đừng bỏ lỡ những sản phẩm và chương trình siêu hấp dẫn</p>
+    </div>
+    <form>
+      <input type="text" placeholder="Địa chỉ email của bạn" name="subscribe-email" id="subscribe-input">
+      <input type="submit" value="Đăng ký" id="subscribe-submit">
+    </form>
+  </div>
+  <!-- End Subscribe container -->
 
     <footer class="footer">
       <hr>
@@ -169,12 +181,12 @@
       <hr>
       <div>Coppyright &copy; 2021, DQHT Team</div>
     </footer>
-    <a id="go-to-head" href="#header">
+    <a id="go-to-head" onclick="topFunction()">
       <i class="fas fa-angle-up"></i>
     </a>
 
-    <script src="assets/js/slideshow.js"></script>
     <script src="assets/js/index.js"></script>
+    <script src="assets/js/scrollToTop.js"></script>
   </body>
   
 </html>
