--- a/history_transaction.html
+++ b/history_transaction.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/aa8e5675e3.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="assets/css/slideshow.css">
 
   <!--  -->
   <link rel="stylesheet" type="text/css" href="assets/css/error_page.css">
@@ -142,29 +141,31 @@
     </div>
     <div class="content">
       <h3>Đơn hàng của tôi</h3>
-      <table>
-        <tr>
-          <th>Mã đơn hàng</th>
-          <th>Ngày mua</th>
-          <th>Sản phẩm</th>
-          <th>Tổng tiền</th>
-          <th>Trạng thái đơn hàng</th>
-        </tr>
-        <tr>
-          <td class="table-row-link" data-link="#">123456</td>
-          <td>5/5/2021</td>
-          <td>Dell Latitude 7480</td>
-          <td>15.000.000</td>
-          <td>Giao hàng thành công</td>
-        </tr>
-        <tr>
-          <td class="table-row-link" data-link="#">1234567</td>
-          <td>5/5/2021</td>
-          <td>Dell Latitude 7480 aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
-          <td>15.000.000</td>
-          <td>Giao hàng thành công</td>
-        </tr>
-      </table>
+      <div class="table-responsive-container">
+        <table>
+          <tr>
+            <th>Mã đơn hàng</th>
+            <th>Ngày mua</th>
+            <th>Sản phẩm</th>
+            <th>Tổng tiền</th>
+            <th>Trạng thái đơn hàng</th>
+          </tr>
+          <tr>
+            <td class="table-row-link" data-link="#">123456</td>
+            <td>5/5/2021</td>
+            <td>Dell Latitude 7480</td>
+            <td>15.000.000</td>
+            <td>Giao hàng thành công</td>
+          </tr>
+          <tr>
+            <td class="table-row-link" data-link="#">1234567</td>
+            <td>5/5/2021</td>
+            <td>Dell Latitude 7480 aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+            <td>15.000.000</td>
+            <td>Giao hàng thành công</td>
+          </tr>
+        </table>
+      </div>
     </div>
   </main>
   <hr>
@@ -234,13 +235,14 @@
     <hr>
     <div>Coppyright &copy; 2021, DQHT Team</div>
   </footer>
-  <a id="go-to-head" href="#header">
+  <a id="go-to-head" onclick="topFunction()">
     <i class="fas fa-angle-up"></i>
   </a>
 
   <!-- <script src="assets/js/table.js"></script> -->
   <script src="assets/js/index.js"></script>
   <script src="assets/js/table.js"></script>
+  <script src="assets/js/scrollToTop.js"></script>
 </body>
 
 </html>
