--- a/history_transaction_empty.html
+++ b/history_transaction_empty.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/aa8e5675e3.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="assets/css/slideshow.css">
 
   <!--  -->
   <link rel="stylesheet" type="text/css" href="assets/css/error_page.css">
@@ -213,12 +212,12 @@
     <hr>
     <div>Coppyright &copy; 2021, DQHT Team</div>
   </footer>
-  <a id="go-to-head" href="#header">
+  <a id="go-to-head" onclick="topFunction()">
     <i class="fas fa-angle-up"></i>
   </a>
 
-  <script src="assets/js/slideshow.js"></script>
   <script src="assets/js/index.js"></script>
+  <script src="assets/js/scrollToTop.js"></script>
 </body>
 
 </html>
