--- a/index_notlogin.html
+++ b/index_notlogin.html
@@ -27,7 +27,7 @@
 
         <ul class="navbar-nav navbar-tab">
           <li class="navbar-item">
-            <a href="index.html" class="navbar-item-link" title="Trang chủ">Trang chủ</a>
+            <a href="#" class="navbar-item-link" title="Trang chủ">Trang chủ</a>
           </li>
           <li class="navbar-item">
             <a href="#" class="navbar-item-link" title="Sản phẩm">Sản phẩm</a>
@@ -56,21 +56,9 @@
             <i class="fas fa-user dropdown-toggle navbar-icon " data-toggle="user-menu" title="Tài khoản"></i>
             <ul id="user-menu" class="dropdown-menu">
               <li class="dropdown-menu-item">
-                <a href="user_info.html" class="dropdown-menu-link">
-                  <i class="fas fa-user"></i>
-                  <span>Thông tin tài khoản</span>
-                </a>
-              </li>
-              <li class="dropdown-menu-item">
-                <a href="history_transaction.html" class="dropdown-menu-link">
-                  <i class="fas fa-shopping-bag"></i>
-                  <span>Lịch sử mua hàng</span>
-                </a>
-              </li>
-              <li class="dropdown-menu-item">
-                <a href="index_notlogin.html" class="dropdown-menu-link">
-                  <i class="fas fa-sign-out-alt"></i>
-                  <span>Đăng xuất</span>
+                <a href="login.html" class="dropdown-menu-link">
+                  <i class="fas fa-sign-in-alt"></i>
+                  <span>Đăng nhập/ Đăng ký</span>
                 </a>
               </li>
             </ul>
@@ -87,7 +75,7 @@
       <div class="navbar-column" id="navbar-menu">
         <ul class="navbar-nav-column ">
           <li class="navbar-item-column">
-            <a href="index.html" class="navbar-link-column" title="Trang chủ">Trang chủ</a>
+            <a href="#" class="navbar-link-column" title="Trang chủ">Trang chủ</a>
           </li>
           <li class="navbar-item-column">
             <a href="#" class="navbar-link-column" title="Sản phẩm">Sản phẩm</a>
@@ -95,18 +83,13 @@
           <li class="navbar-item-column">
             <a href="#" class="navbar-link-column" title="Liên hệ">Liên hệ</a>
           </li>
+          <li class="navbar-item-column">
+            <a href="login.html" class="navbar-link-column" title="Liên hệ">Đăng nhập/ Đăng ký</a>
+          </li>
         </ul>
       </div>
     </header>
-    <!-- <div class="loading-wrapper">
-      <img src="assets/image/loading5.gif">
-    </div> -->
     <main class="main-content">
-      <div class="loading-wrapper">
-        <img src="assets/image/logo-side180_60px.png" class="loading-logo logo">
-        <p>Đang tải trang, bạn chờ một chút nhé ^^</p>
-        <img src="assets/image/loading4-crop.gif" class="loading-gif">
-      </div>
       <div class="slideshow-container">
         <div class="slide-item fade">
           <!-- <div class="numbertext">1 / 3</div> -->
