--- a/payment-success.html
+++ b/payment-success.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>eShop - Mua sắm online</title>
+    <title>Đặt hàng thành công | eShop</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="icon" type="image/png" href="assets/image/logo200px.png" >
@@ -9,7 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/aa8e5675e3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/slideshow.css">
+
+    <!--  -->
+    <link rel="stylesheet" type="text/css" href="assets/css/error_page.css">
   </head>
   <body class="overlay-scrollbar">
     <header class="header" id="header">
@@ -27,7 +29,7 @@
 
         <ul class="navbar-nav navbar-tab">
           <li class="navbar-item">
-            <a href="index.html" class="navbar-item-link" title="Trang chủ">Trang chủ</a>
+            <a href="#" class="navbar-item-link" title="Trang chủ">Trang chủ</a>
           </li>
           <li class="navbar-item">
             <a href="#" class="navbar-item-link" title="Sản phẩm">Sản phẩm</a>
@@ -56,19 +58,19 @@
             <i class="fas fa-user dropdown-toggle navbar-icon " data-toggle="user-menu" title="Tài khoản"></i>
             <ul id="user-menu" class="dropdown-menu">
               <li class="dropdown-menu-item">
-                <a href="user_info.html" class="dropdown-menu-link">
+                <a href="#" class="dropdown-menu-link">
                   <i class="fas fa-user"></i>
                   <span>Thông tin tài khoản</span>
                 </a>
               </li>
               <li class="dropdown-menu-item">
-                <a href="history_transaction.html" class="dropdown-menu-link">
+                <a href="#" class="dropdown-menu-link">
                   <i class="fas fa-shopping-bag"></i>
                   <span>Lịch sử mua hàng</span>
                 </a>
               </li>
               <li class="dropdown-menu-item">
-                <a href="index_notlogin.html" class="dropdown-menu-link">
+                <a href="#" class="dropdown-menu-link">
                   <i class="fas fa-sign-out-alt"></i>
                   <span>Đăng xuất</span>
                 </a>
@@ -87,7 +89,7 @@
       <div class="navbar-column" id="navbar-menu">
         <ul class="navbar-nav-column ">
           <li class="navbar-item-column">
-            <a href="index.html" class="navbar-link-column" title="Trang chủ">Trang chủ</a>
+            <a href="#" class="navbar-link-column" title="Trang chủ">Trang chủ</a>
           </li>
           <li class="navbar-item-column">
             <a href="#" class="navbar-link-column" title="Sản phẩm">Sản phẩm</a>
@@ -98,44 +100,17 @@
         </ul>
       </div>
     </header>
-    <!-- <div class="loading-wrapper">
-      <img src="assets/image/loading5.gif">
-    </div> -->
-    <main class="main-content">
-      <div class="loading-wrapper">
-        <img src="assets/image/logo-side180_60px.png" class="loading-logo logo">
-        <p>Đang tải trang, bạn chờ một chút nhé ^^</p>
-        <img src="assets/image/loading4-crop.gif" class="loading-gif">
-      </div>
-      <div class="slideshow-container">
-        <div class="slide-item fade">
-          <!-- <div class="numbertext">1 / 3</div> -->
-          <img src="assets/image/slide1.jpg">
-          <!-- <div class="text">Caption One</div> -->
-        </div>
-        <div class="slide-item fade">
-          <!-- <div class="numbertext">2 / 3</div> -->
-          <img src="assets/image/slide2.jpg">
-          <!-- <div class="text">Caption Two</div> -->
-        </div>
-        <div class="slide-item fade">
-          <!-- <div class="numbertext">3 / 3</div> -->
-          <img src="assets/image/slide3.jpg">
-          <!-- <div class="text">Caption Three</div> -->
-        </div>
-      
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        
-        <br>
 
-        <div class="slideshow-dot-container">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-        </div>
-      </div>
+
+
+
+
+    <main class="main-content">
+      <h2 class="notice">Đặt hàng thành công! Cảm ơn bạn đã mua hàng!</h2>
+      <img src="assets/image/successful_purchase.svg" class="img-notice">
+      <a class="go-back-link" href="index.html">Tiếp tục mua hàng</a>
     </main>
+
 
     <!-- Subscribe container -->
   <hr>
@@ -152,7 +127,6 @@
   </div>
   <!-- End Subscribe container -->
 
-  
     <footer class="footer">
       <hr>
       <div class="footer-info-container">
@@ -211,7 +185,6 @@
       <i class="fas fa-angle-up"></i>
     </a>
 
-    <script src="assets/js/slideshow.js"></script>
     <script src="assets/js/index.js"></script>
     <script src="assets/js/scrollToTop.js"></script>
   </body>
