--- a/user_info.html
+++ b/user_info.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/aa8e5675e3.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="assets/css/slideshow.css">
 
   <!--  -->
   <link rel="stylesheet" type="text/css" href="assets/css/error_page.css">
@@ -193,6 +192,7 @@
       </form>
     </div>
   </main>
+  <!-- Subscribe container -->
   <hr>
   <div class="subscribe-container">
     <img src="assets/image/subscribe.svg" alt="subscribe image">
@@ -205,6 +205,7 @@
       <input type="submit" value="Đăng ký" id="subscribe-submit">
     </form>
   </div>
+  <!-- End Subscribe container -->
   <footer class="footer">
     <hr>
     <div class="footer-info-container">
@@ -260,12 +261,12 @@
     <hr>
     <div>Coppyright &copy; 2021, DQHT Team</div>
   </footer>
-  <a id="go-to-head" href="#header">
+  <a id="go-to-head" onclick="topFunction()">
     <i class="fas fa-angle-up"></i>
   </a>
 
-  <script src="assets/js/slideshow.js"></script>
   <script src="assets/js/index.js"></script>
+  <script src="assets/js/scrollToTop.js"></script>
 </body>
 
 </html>
