test: save email subscribe into firebase, use ajax

--- a/payment.html
+++ b/payment.html
@@ -311,10 +311,10 @@
       <p>Đăng ký nhận bản tin từ eShop</p>
       <p>Đừng bỏ lỡ những sản phẩm và chương trình siêu hấp dẫn</p>
     </div>
-    <form>
-      <input type="text" placeholder="Địa chỉ email của bạn" name="subscribe-email" id="subscribe-input">
+    <div>
+      <input type="email" placeholder="Địa chỉ email của bạn" name="subscribe-email" id="subscribe-input" required>
       <input type="submit" value="Đăng ký" id="subscribe-submit">
-    </form>
+    </div>
   </div>
   <!-- End Subscribe container -->
 
