--- a/admin_frontend/index.html
+++ b/admin_frontend/index.html
@@ -37,7 +37,7 @@
 		<!-- end form -->
 		<!-- nav right -->
 		<ul class="navbar-nav nav-right">
-			<li class="nav-item dropdown">
+			<li class="nav-itemn">
 				<a class="nav-link" href="/CreateProduct">
 					<i class="fas fa-plus-circle">Create Product</i>
 				</a>
@@ -47,6 +47,7 @@
 					<i class="fas fa-moon dark-icon"></i>
 					<i class="fas fa-sun light-icon"></i>
 				</a>
+			</li>
 		</ul>
 		<!-- end nav right -->
 	</div>
@@ -145,8 +146,8 @@
 								<tr>
 									<th>ID</th>
 									<th>Name</th>
-									<th></th>
-									<th></th>
+									<th>Edit</th>
+									<th>Delete</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -372,8 +373,8 @@
 									<th>Description</th>
 									<th>Category</th>
 									<th>Available</th>
-									<th></th>
-									<th></th>
+									<th>Edit</th>
+									<th>Delete</th>
 								</tr>
 							</thead>
 							<tbody>
