--- a/admin_frontend/CreateCategory.html
+++ b/admin_frontend/CreateCategory.html
@@ -23,6 +23,8 @@
 		</ul>
 		<!-- end nav right -->
 	</div>
+	<div class="wrapper">
+		<div class="row">
 			<div class="col-4 col-m-12 col-sm-12">
 				<div class="card">
 					<div class="card-header">
@@ -34,9 +36,6 @@
 						<table>
 							<thead>
 								<tr>
-									<th>Category</th>
-								</tr>
-								<tr>
 									<th>ID</th>
 									<td><input type="number" name="id" required></td>
 								</tr>
@@ -45,12 +44,12 @@
 									<td><input type="text" name="name" required></td>
 								</tr>
 								<tr>					
-									<th>Create</th>
+									<th>Save</th>
 									<td>
 										<form class="navbar-nav nav-left">
 											<li class="nav-item">
 												<a class="nav-link">
-													<i class="fas fa-plus-circle"></i>
+													<i class="fas fa-save"></i>
 												</a>
 											</li>
 										</form>
@@ -61,6 +60,8 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
 	<!-- end main content -->
 	<!-- import script -->
 	<script src="index.js"></script>
