--- a/admin_frontend/CreateProduct.html
+++ b/admin_frontend/CreateProduct.html
@@ -23,6 +23,8 @@
 		</ul>
 		<!-- end nav right -->
 	</div>
+	<div class="wrapper">
+		<div class="row">
 			<div class="col-4 col-m-12 col-sm-12">
 				<div class="card">
 					<div class="card-header">
@@ -33,9 +35,6 @@
 					<div class="pdoduct-content">
 						<table>
 							<thead>
-								<tr>
-									<th>Product</th>
-								</tr>
 								<tr>
 									<th>ID</th>
 									<td><input type="number" name="id" required></td>
@@ -69,12 +68,12 @@
 									<td><input type="number" name="available" required></td>
 								</tr>	
 								<tr>					
-									<th>Create</th>
+									<th>Save</th>
 									<td>
 										<form class="navbar-nav nav-left">
 											<li class="nav-item">
 												<a class="nav-link">
-													<i class="fas fa-plus-circle"></i>
+													<i class="fas fa-save"></i>
 												</a>
 											</li>
 										</form>
@@ -84,7 +83,9 @@
 						</table>
 					</div>
 				</div>
-			</div>
+			</div>'
+		</div>
+	</div>
 	<!-- end main content -->
 	<!-- import script -->
 	<script src="index.js"></script>
