update: add a product introduction to homepage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/aa8e5675e3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/slideshow.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/product.css">
   </head>
   <body class="overlay-scrollbar">
     <header class="header" id="header">
@@ -134,6 +136,93 @@
           <span class="dot" onclick="currentSlide(2)"></span>
           <span class="dot" onclick="currentSlide(3)"></span>
         </div>
+      </div>
+      <div class="container1">
+        <div class="container1-item">
+          <div><i class="fas fa-shipping-fast"></i></div>
+          <span>Vận chuyển toàn quốc</span>
+        </div>
+        <div class="container1-item">
+          <div><i class="fas fa-laptop"></i></div>
+          <span>Sản phẩm đa dạng</span>
+        </div>
+        <div class="container1-item">
+          <div><i class="fas fa-ticket-alt"></i></div>
+          <span>Ưu đãi hấp dẫn</span>
+        </div>
+        <div class="container1-item">
+          <div><i class="fas fa-phone-alt"></i></div>
+          <span>Tư vấn 24/7</span>
+        </div>
+
+      </div>
+
+      <div class="product-container">
+        <a class="product-container-title" href="product.html">Sản phẩm nổi bật</a>
+        <div class="flex">
+          <div class="flex-item product-item">
+            <img src="assets/image/product1.jpg">
+            <span class="product-discount-tag">-20%</span>
+            <p class="product-name"><span>Dell 7480 abadbjkd adjweoidh aaaaaaaaaaaaaaaaaaaaaaaaa</span></p>
+            <span class="product-price-after">12.000.000 đ</span>
+            <span class="product-price-before">15.000.000 đ</span>
+            <div class="add-cart-btn">
+              <i class="fas fa-cart-plus"></i>
+            </div>
+          </div>
+          <div class="flex-item product-item">
+            <img src="assets/image/product2.jpg">
+            <span class="product-discount-tag">-20%</span>
+            <p class="product-name"><span>Laptop Asus VivoBook S15 S533EA-BQ018T (Core i5-1135G7/ 8GB DDR4 3200MHz/ 512GB M.2 NVMe PCIe 3.0/ 15.6 FHD/ Win10) - Hàng Chính Hãng</span></p>
+            <span class="product-price-after">12.000.000 đ</span>
+            <span class="product-price-before">15.000.000 đ</span>
+            <div class="add-cart-btn">
+              <i class="fas fa-cart-plus"></i>
+            </div>
+          </div>
+          <div class="flex-item product-item">
+            <img src="assets/image/product3.jpg">
+            <span class="product-discount-tag">-20%</span>
+            <p class="product-name"><span>Dell 7480 abadbjkd adjweoidh aaaaaaaaaaaaaaaaaaaaaaaaa</span></p>
+            <span class="product-price-after">12.000.000 đ</span>
+            <span class="product-price-before">15.000.000 đ</span>
+            <div class="add-cart-btn">
+              <i class="fas fa-cart-plus"></i>
+            </div>
+          </div>
+          <div class="flex-item product-item">
+            <img src="assets/image/product4.jpg">
+            <span class="product-discount-tag">-20%</span>
+            <p class="product-name"><span>Laptop Asus VivoBook S15 S533EA-BQ018T (Core i5-1135G7/ 8GB DDR4 3200MHz/ 512GB M.2 NVMe PCIe 3.0/ 15.6 FHD/ Win10) - Hàng Chính Hãng</span></p>
+            <span class="product-price-after">12.000.000 đ</span>
+            <span class="product-price-before">15.000.000 đ</span>
+            <div class="add-cart-btn">
+              <i class="fas fa-cart-plus"></i>
+            </div>
+          </div>
+          <div class="flex-item product-item">
+            <img src="assets/image/product2.jpg">
+            <span class="product-discount-tag">-20%</span>
+            <p class="product-name"><span>Dell 7480 abadbjkd adjweoidh aaaaaaaaaaaaaaaaaaaaaaaaa</span></p>
+            <span class="product-price-after">12.000.000 đ</span>
+            <span class="product-price-before">15.000.000 đ</span>
+            <div class="add-cart-btn">
+              <i class="fas fa-cart-plus"></i>
+            </div>
+          </div>
+          <div class="flex-item product-item">
+            <img src="assets/image/product3.jpg">
+            <span class="product-discount-tag">-20%</span>
+            <p class="product-name"><span>Laptop Asus VivoBook S15 S533EA-BQ018T (Core i5-1135G7/ 8GB DDR4 3200MHz/ 512GB M.2 NVMe PCIe 3.0/ 15.6 FHD/ Win10) - Hàng Chính Hãng</span></p>
+            <span class="product-price-after">12.000.000 đ</span>
+            <span class="product-price-before">15.000.000 đ</span>
+            <div class="add-cart-btn">
+              <i class="fas fa-cart-plus"></i>
+            </div>
+          </div>
+        </div>
+
+        <a class="more-product-btn" href="product.html">Xem thêm sản phẩm</a>
       </div>
     </main>
 
