add: navigate to product detail

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div class="product-container">
         <a class="product-container-title" href="product.html">Sản phẩm nổi bật</a>
         <div class="flex">
-          <div class="flex-item product-item">
+          <div class="flex-item product-item" data-link="product-detail.html">
             <img src="assets/image/product1.jpg">
             <span class="product-discount-tag">-20%</span>
             <p class="product-name"><span>Dell 7480 abadbjkd adjweoidh aaaaaaaaaaaaaaaaaaaaaaaaa</span></p>
@@ -170,7 +170,7 @@
               <i class="fas fa-cart-plus"></i>
             </div>
           </div>
-          <div class="flex-item product-item">
+          <div class="flex-item product-item" data-link="product-detail.html">
             <img src="assets/image/product2.jpg">
             <span class="product-discount-tag">-20%</span>
             <p class="product-name"><span>Laptop Asus VivoBook S15 S533EA-BQ018T (Core i5-1135G7/ 8GB DDR4 3200MHz/ 512GB M.2 NVMe PCIe 3.0/ 15.6 FHD/ Win10) - Hàng Chính Hãng</span></p>
@@ -180,7 +180,7 @@
               <i class="fas fa-cart-plus"></i>
             </div>
           </div>
-          <div class="flex-item product-item">
+          <div class="flex-item product-item" data-link="product-detail.html">
             <img src="assets/image/product3.jpg">
             <span class="product-discount-tag">-20%</span>
             <p class="product-name"><span>Dell 7480 abadbjkd adjweoidh aaaaaaaaaaaaaaaaaaaaaaaaa</span></p>
@@ -190,7 +190,7 @@
               <i class="fas fa-cart-plus"></i>
             </div>
           </div>
-          <div class="flex-item product-item">
+          <div class="flex-item product-item" data-link="product-detail.html">
             <img src="assets/image/product4.jpg">
             <span class="product-discount-tag">-20%</span>
             <p class="product-name"><span>Laptop Asus VivoBook S15 S533EA-BQ018T (Core i5-1135G7/ 8GB DDR4 3200MHz/ 512GB M.2 NVMe PCIe 3.0/ 15.6 FHD/ Win10) - Hàng Chính Hãng</span></p>
@@ -200,7 +200,7 @@
               <i class="fas fa-cart-plus"></i>
             </div>
           </div>
-          <div class="flex-item product-item">
+          <div class="flex-item product-item" data-link="product-detail.html">
             <img src="assets/image/product2.jpg">
             <span class="product-discount-tag">-20%</span>
             <p class="product-name"><span>Dell 7480 abadbjkd adjweoidh aaaaaaaaaaaaaaaaaaaaaaaaa</span></p>
@@ -210,7 +210,7 @@
               <i class="fas fa-cart-plus"></i>
             </div>
           </div>
-          <div class="flex-item product-item">
+          <div class="flex-item product-item" data-link="product-detail.html">
             <img src="assets/image/product3.jpg">
             <span class="product-discount-tag">-20%</span>
             <p class="product-name"><span>Laptop Asus VivoBook S15 S533EA-BQ018T (Core i5-1135G7/ 8GB DDR4 3200MHz/ 512GB M.2 NVMe PCIe 3.0/ 15.6 FHD/ Win10) - Hàng Chính Hãng</span></p>
@@ -303,6 +303,7 @@
     <script src="assets/js/slideshow.js"></script>
     <script src="assets/js/index.js"></script>
     <script src="assets/js/scrollToTop.js"></script>
+    <script src="assets/js/product.js"></script>
   </body>
   
 </html>
