--- a/category.html
+++ b/category.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Dell Latitude 7480 | eShop</title>
+  <title>Danh mục 1 | eShop</title>
   <meta charset="UTF-8">
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
@@ -143,7 +143,7 @@
     <div class="content">
       <h2 id="page-title">Sản phẩm - Danh mục 1</h2>
       <div class="flex">
-        <div class="flex-item product-item">
+        <div class="flex-item product-item" data-link="product-detail.html">
           <img src="assets/image/product1.jpg">
           <span class="product-discount-tag">-20%</span>
           <p class="product-name"><span>Dell 7480 abadbjkd adjweoidh aaaaaaaaaaaaaaaaaaaaaaaaa</span></p>
@@ -153,7 +153,7 @@
             <i class="fas fa-cart-plus"></i>
           </div>
         </div>
-        <div class="flex-item product-item">
+        <div class="flex-item product-item" data-link="product-detail.html">
           <img src="assets/image/product2.jpg">
           <span class="product-discount-tag">-20%</span>
           <p class="product-name"><span>Laptop Asus VivoBook S15 S533EA-BQ018T (Core i5-1135G7/ 8GB DDR4 3200MHz/ 512GB M.2 NVMe PCIe 3.0/ 15.6 FHD/ Win10) - Hàng Chính Hãng</span></p>
@@ -164,7 +164,7 @@
           </div>
         </div>
         <div class="flex-item product-item">
-          <img src="assets/image/product3.jpg">
+          <img src="assets/image/product3.jpg" data-link="product-detail.html">
           <span class="product-discount-tag">-20%</span>
           <p class="product-name"><span>Dell 7480 abadbjkd adjweoidh aaaaaaaaaaaaaaaaaaaaaaaaa</span></p>
           <span class="product-price-after">12.000.000 đ</span>
@@ -174,7 +174,7 @@
           </div>
         </div>
         <div class="flex-item product-item">
-          <img src="assets/image/product4.jpg">
+          <img src="assets/image/product4.jpg" data-link="product-detail.html">
           <span class="product-discount-tag">-20%</span>
           <p class="product-name"><span>Laptop Asus VivoBook S15 S533EA-BQ018T (Core i5-1135G7/ 8GB DDR4 3200MHz/ 512GB M.2 NVMe PCIe 3.0/ 15.6 FHD/ Win10) - Hàng Chính Hãng</span></p>
           <span class="product-price-after">12.000.000 đ</span>
@@ -184,7 +184,7 @@
           </div>
         </div>
         <div class="flex-item product-item">
-          <img src="assets/image/product2.jpg">
+          <img src="assets/image/product2.jpg" data-link="product-detail.html">
           <span class="product-discount-tag">-20%</span>
           <p class="product-name"><span>Dell 7480 abadbjkd adjweoidh aaaaaaaaaaaaaaaaaaaaaaaaa</span></p>
           <span class="product-price-after">12.000.000 đ</span>
@@ -194,7 +194,7 @@
           </div>
         </div>
         <div class="flex-item product-item">
-          <img src="assets/image/product3.jpg">
+          <img src="assets/image/product3.jpg" data-link="product-detail.html">
           <span class="product-discount-tag">-20%</span>
           <p class="product-name"><span>Laptop Asus VivoBook S15 S533EA-BQ018T (Core i5-1135G7/ 8GB DDR4 3200MHz/ 512GB M.2 NVMe PCIe 3.0/ 15.6 FHD/ Win10) - Hàng Chính Hãng</span></p>
           <span class="product-price-after">12.000.000 đ</span>
