--- a/flask-message.html
+++ b/flask-message.html
@@ -9,41 +9,51 @@
     align-items: center;
     gap: 10px;
 
+    color: green;
+
     border: 1px solid #bbbbbb;
     border-radius: 5px;
-    width: 30%;
+    width: fit-content;
 
-    position: fixed;
+    /* position: fixed;
     top: 10px;
-    left: calc(50% - 30%/2);
+    left: calc(50% - 30%/2); */
 
-    transform: translateY(-200%);
-    visibility: hidden;
+    /* transform: translateY(-200%); */
+    position: fixed;
+    top: 2%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding:0rem 2rem;
+    background-color: #eee;
+    /* visibility: hidden; */
+    display: none;
     transition: 0.3s ease-out;
   }
-  #icon {
-    display: inline-block;
-    background-color: green;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
+
+  #flask-message > i {
+    color: green;
   }
+ 
 
   #flask-message.show {
-    transform: translateY(0%);
-    visibility: visible;
+    /* transform: translateY(0%); */
+    /* visibility: visible; */
+    display: flex;
   }
   #flask-message.hide {
-    transform: translateY(-200%);
-    visibility:  hidden;
+    /* transform: translateY(-200%); */
+    /* visibility:  hidden; */
+    display: none;
   }
 </style>
 <div id="flask-message">
-  <div id="icon"></div>
+  <i class="fas fa-check-circle"></i>
   <p>Submit thành công</p>
 </div>
 
 <input type="submit" id="submit"/>
+<script src="https://kit.fontawesome.com/aa8e5675e3.js" crossorigin="anonymous"></script>
 <script>
   var flask_message = document.querySelector("#flask-message");
   var button = document.querySelector("#submit");
