--- a/cart.html
+++ b/cart.html
@@ -164,7 +164,7 @@
               <td class="product-qty-row">
                 <div>
                   <span class="decrease-qty value-button" onclick="decreaseValue(this)">-</span>
-                  <input class="input-qty" type="number" value="1" min="1"  id="number" required>
+                  <input class="input-qty" type="number" value="1" min="1" max="5" id="number" required>
                   <span class="increase-qty value-button" onclick="increaseValue(this)">+</span>
                 </div>
                 <a href="#" class="remove-product-btn">Xóa</a>
